create-vs-path-for-grpc/whereami-grpc-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-grpc-vs
  namespace: whereami-grpc
spec:
  gateways:
  - asm-ingress/whereami-gateway
  hosts:
  - 'frontend.endpoints.mc-e2m-01.cloud.goog'
  http:
  - name: "wherami-grpc"
    match:
    - uri:
        prefix: "/whereami.Whereami/"
        #regex: '^.*whereami\.Whereami.*$'
    - uri:
        prefix: "/grpc.reflection.v1alpha.ServerReflection/" # need this if not using proto file using gRPCurl
    route:
    - destination:
        host: whereami-grpc
        port:
          number: 9090
